tenant-multiple-namespaces-svc/policies/allow-all-in-ns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all-in-ns
  namespace: tenant1-ns1
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tenant1-ns1
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tenant1-ns1
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system  # allow traffic to kube-proxy (not always needed).
  policyTypes:
    - Ingress
    - Egress
