tenant-multiple-namespaces-svc/policies/allow-ingress-from-other-tenant-ns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-from-other-tenant-ns
  namespace: tenant1-ns2
spec:
  podSelector: {}
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            knative.dev/tenant: tenant1
  policyTypes:
    - Ingress
