tenant-multiple-namespaces-svc/policies/deny-all.yaml
# DENY ALL network policy template

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all
  namespace: tenant1-ns1 # replace by the actual tenant namespace
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
